--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@ body{
   justify-content: center;
   align-items: center;
   gap: 20px;
-  height: 100vh;
+  height: 100%;
+  padding: 50px;
   border-radius: 10px;
   border: 4px solid rgb(29, 58, 112);
   background-color: rgb(211, 226, 255);
@@ -57,6 +58,61 @@ body{
   color: white;
 }
 
+.insert{
+  padding: 10px;
+  font-size: 1em;
+  border-radius: 8px;
+  border: 2px solid rgb(21, 70, 9);
+  background-color: rgb(40, 120, 20);
+  color: white;
+  font-family: 'Courier New', Courier, monospace;
+  cursor: pointer;
+}
+
+.insert:hover{
+  background-color: rgb(54, 151, 30);
+  color: white;
+}
+
+.us-buttons{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.up{
+  padding: 3px;
+  width: 30px;
+  border-radius: 5px;
+  border: 2px solid rgb(68, 70, 9);
+  background-color: rgb(145, 149, 27);
+  color: white;
+  font-family: 'Courier New', Courier, monospace;
+  cursor: pointer;
+}
+
+.up:hover{
+  background-color: rgb(193, 199, 38);
+  color: white;
+}
+
+.del{
+  padding: 3px;
+  width: 30px;
+  border-radius: 5px;
+  border: 2px solid rgb(70, 9, 21);
+  background-color: rgb(154, 24, 50);
+  color: white;
+  font-family: 'Courier New', Courier, monospace;
+  cursor: pointer;
+}
+
+.del:hover{
+  background-color: rgb(201, 36, 69);
+  color: white;
+}
+
 table {
   width: 80%;
   border-collapse: collapse;
@@ -78,4 +134,30 @@ th {
 
 tr:hover {
   background-color: rgb(172, 203, 255);
+}
+
+.form{
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+  gap: 30px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  border: 4px solid rgb(84, 176, 247);
+  border-radius: 6px;
+}
+
+.form-block{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  font-size: 1.2em;
+}
+
+.form-block input{
+  font-size: 1.2em;
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+  background-color:rgb(255, 255, 255) ;
 }
